--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "devDependencies": {
     "async": "^0.9.0",
-    "edit-google-spreadsheet": "^0.2.7",
     "grunt": "~0.4.5",
     "keychain": "0.0.4",
     "read": "^1.0.5",
     "stdio": "^0.2.2",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "edit-google-spreadsheet": "^0.2.7",
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
