--- a/package.json
+++ b/package.json
@@ -27,13 +27,7 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "async": "^0.9.0",
-    "grunt": "~0.4.5",
-    "keychain": "0.0.4",
-    "read": "^1.0.5",
-    "stdio": "^0.2.2",
-    "underscore": "^1.7.0",
-    "edit-google-spreadsheet": "^0.2.7"
+    "grunt": "~0.4.5"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
@@ -42,6 +36,10 @@
     "gruntplugin"
   ],
   "dependencies": {
+    "async": "^0.9.0",
+    "keychain": "0.0.4",
+    "read": "^1.0.5",
+    "underscore": "^1.7.0",
     "edit-google-spreadsheet": "^0.2.7"
   }
 }
