--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "grunt-avatarlabs-googlespreadsheetexporter",
-  "description": "Export language file from Google Spreadsheets using your Google Account.",
-  "version": "0.5.0",
+  "description": "Export language file from Google Spreadsheets using your Avatarlabs Google Account.",
+  "version": "0.5.1",
   "homepage": "https://github.com/jleplomet/grunt-avatarlabs-googlespreadsheetexporter",
   "author": {
     "name": "Jeff Leplomet",
-    "email": "jleplomet@gmail.com"
+    "email": "jeff@avatarlabs.com"
   },
   "repository": {
     "type": "git",
@@ -14,14 +14,8 @@
   "bugs": {
     "url": "https://github.com/jleplomet/grunt-avatarlabs-googlespreadsheetexporter/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/jleplomet/grunt-avatarlabs-googlespreadsheetexporter/blob/master/LICENSE-MIT"
-    }
-  ],
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.12.0"
   },
   "scripts": {
     "test": "grunt test"
@@ -36,10 +30,10 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "0.9.0",
     "keychain": "0.0.4",
-    "read": "^1.0.5",
-    "underscore": "^1.7.0",
-    "edit-google-spreadsheet": "^0.2.7"
+    "read": "1.0.5",
+    "underscore": "1.8.3",
+    "edit-google-spreadsheet": "0.2.16"
   }
 }
